add pause menu and sound modifier

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,13 @@
-/App.class
-/entities/
 /inputs/
 /main/
-/player_sprites.png
-/utilz/
+/entities/
+/gamestates/
 /levels/
-/outside_sprites.png
-/level_one_data.png
+/ui/
+/utilz/
+/background_menu.png
+/level_one_data_long.png
+/pause_menu.png
+/sound_button.png
+/urm_buttons.png
+/volume_buttons.png
