--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,35 +1,25 @@
-/App.class
-/background_menu.png
+/audio/
 /ball.png
-/big_clouds.png
-/button_atlas.png
 /cannon_atlas.png
-/completed_sprite.png
-/crabby_sprite.png
 /death_screen.png
-/entities/
-/gamestates/
-/health_power_bar.png
-/inputs/
 /level_one_data.png
 /level_one_data_long.png
-/levels/
-/lvls/
-/main/
-/menu_background.png
 /objects/
 /objects_sprites.png
 /options_background.png
-/outside_sprites.png
-/pause_menu.png
-/player_sprites.png
-/playing_bg_img.png
 /potions_sprites.png
-/small_clouds.png
-/sound_button.png
 /trap_atlas.png
+/entities/
+/gamestates/
 /ui/
-/urm_buttons.png
+/lvls/
 /utilz/
-/volume_buttons.png
-/audio/
+/levels/
+/pinkstar_atlas.png
+/rain_particle.png
+/shark_atlas.png
+/ship.png
+/tree_one_atlas.png
+/tree_two_atlas.png
+/water.png
+/water_atlas_animation.png
